# Game-of-life

./: .gitignore  CMakeLists.txt  README.md  World_configuration.txt  gamelife.c  gamelife.h  graphics.c  graphics.h  lifegame.cpp  lifegame.h  main.c
